@@ -60,6 +60,14 @@
             Cloud Files, Google Storage)
         </li>
         <li>[Feature] Move and rename files and folders (Google Docs)</li>
+        <li>[Feature] Update size display incrementally while calculating recursively (<a
+                href="http://trac.cyberduck.ch/ticket/3213">#3213)</a>)
+        <li>[Feature] Menu items to copy Web & CDN URLs to clipboard (<a href="http://trac.cyberduck.ch/ticket/4207">#4207)</a>)
+        <li>[Feature] Hidden preference to change SSH options for 'Open in Terminal.app' (<a
+                href="http://trac.cyberduck.ch/ticket/4232">#4232)</a>)
+        <li>[Feature] Batch editing of S3 metadata (Google Storage, S3) (<a href="http://trac.cyberduck.ch/ticket/5105">#5105)</a>)
+        <li>[Feature] Show number of active transfers in Dock (<a href="http://trac.cyberduck.ch/ticket/3808">#3808)</a>)
+        <li>[Feature] Copy directory listing to clipboard (<a href="http://trac.cyberduck.ch/ticket/2372">#2372)</a>)
         <li>[Bugfix] Improved interoperability with Eucalyptus Walrus (S3)</li>
         <li>[Bugfix] Improved interoperability with Dunkel Cloud Storage (S3)</li>
         <li>[Bugfix] Trust validation failure with self signed certificates for HTTP redirects (WebDAV) (
@@ -76,6 +84,17 @@
             <a href="http://trac.cyberduck.ch/ticket/3941">#3941)</a>)
         </li>
         <li>[Bugfix] Dragging files for upload is slow (<a href="http://trac.cyberduck.ch/ticket/4141">#4141)</a>)</li>
+        <li>[Bugfix] STAT fails for directories containing spaces in filename (FTP) (<a
+                href="http://trac.cyberduck.ch/ticket/2500">#2500)</a>)
+        </li>
+        <li>[Bugfix] Upload to drop box gives file listing error (<a
+                href="http://trac.cyberduck.ch/ticket/2552">#2552)</a>)
+        </li>
+        <li>[Bugfix] Incompatibility with Akamai NetStorage (SFTP) (<a href="http://trac.cyberduck.ch/ticket/4015">#4015)</a>)
+        </li>
+        <li>[Bugfix] Usability of changing permissions in Info panel (FTP, SFTP) (<a
+                href="http://trac.cyberduck.ch/ticket/3930">#3930)</a>)
+        </li>
     </ul>
 
     <strong><a href=
