@@ -27,6 +27,12 @@ Changelog. Last modified: $Date$
 - [Feature] Edit metadata for multiple files (S3, Google Storage)
 - [Feature] Menu items to copy CDN, signed & authenticated URLs to clipboard or open in Web Browser. (S3, Cloud Files, Google Storage)
 - [Feature] Move and rename files and folders (Google Docs)
+- [Feature] Update size display incrementally while calculating recursively (#3213)
+- [Feature] Menu items to copy Web & CDN URLs to clipboard (#4207)
+- [Feature] Hidden preference to change SSH options for 'Open in Terminal.app' (#4232)
+- [Feature] Batch editing of S3 metadata (Google Storage, S3) (#5105)
+- [Feature] Show number of active transfers in Dock (#3808)
+- [Feature] Copy directory listing to clipboard (#2372)
 - [Bugfix] Improved interoperability with Eucalyptus Walrus (S3)
 - [Bugfix] Improved interoperability with Dunkel Cloud Storage (S3)
 - [Bugfix] Trust validation failure with self signed certificates for HTTP redirects (WebDAV) (#2443)
@@ -34,6 +40,10 @@ Changelog. Last modified: $Date$
 - [Bugfix] Connect authenticated to thirdparty buckets (S3) (#4480)
 - [Bugfix] Connections stalls after long idle (SFTP) (#5073, #4214, #3941)
 - [Bugfix] Dragging files for upload is slow (#4141)
+- [Bugfix] STAT fails for directories containing spaces in filename (FTP) (#2500)
+- [Bugfix] Upload to drop box gives file listing error (#2552)
+- [Bugfix] Incompatibility with Akamai NetStorage (SFTP) (#4015)
+- [Bugfix] Usability of changing permissions in Info panel (FTP, SFTP) (#3930)
 
 3.5.1 (Jun-15-2010) [http://trac.cyberduck.ch/milestone/3.5.1]
 - [Bugfix] Crash opening Info window (#4536)
